Update DexLoader.java